# advent2016

./: .gitignore  ChangeLog.md  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day1.hs  Day10  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16-functions.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  advent2016.cabal
asmprog-final/: .gitignore  ChangeLog.md  LICENSE  Main.hs  Optimizer.hs  Small.hs  asmprog-final.cabal
lib/: AsmProg.hs  Common.hs  GridCoord.hs  Search.hs  SmallBitSet.hs  UnboxFunctions.hs
