name:                advent2016
version:             0.1.0.0
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           2016 Eric Mertens
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Common
  build-depends:       base >=4.9 && <4.10, megaparsec >=5.1 && <5.2
  default-language:    Haskell2010

executable Day01
  main-is:             Day01.hs
  build-depends:       advent2016, base >=4.9 && <4.10, split >=0.2 && <0.3, containers >=0.5 && <0.6
  default-language:    Haskell2010

executable Day02
  main-is:             Day02.hs
  build-depends:       advent2016, base >=4.9 && <4.10, array >=0.5 && <0.6
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent2016, base >=4.9 && <4.10, split >=0.2 && <0.3
  default-language:    Haskell2010

executable Day04
  main-is:             Day04.hs
  build-depends:       advent2016, base >=4.9 && <4.10, containers >= 0.5 && <0.6, megaparsec >= 5.1 && < 5.2
  default-language:    Haskell2010

executable Day05
  main-is:             Day05.hs
  build-depends:       advent2016, base >=4.9 && <4.10, containers >= 0.5 && <0.6, cryptonite >=0.20 && <0.21, bytestring >=0.10 && <0.11
  default-language:    Haskell2010

executable Day06
  main-is:             Day06.hs
  build-depends:       advent2016, base >=4.9 && <4.10, containers >= 0.5 && <0.6
  default-language:    Haskell2010

executable Day07
  main-is:             Day07.hs
  build-depends:       advent2016, base >=4.9 && <4.10
  default-language:    Haskell2010

executable Day08
  main-is:             Day08.hs
  build-depends:       advent2016, base >=4.9 && <4.10, array >=0.5 && <0.6
  default-language:    Haskell2010

executable Day09
  main-is:             Day09.hs
  build-depends:       advent2016, base >=4.9 && <4.10
  default-language:    Haskell2010

executable Day10
  main-is:             Day10.hs
  build-depends:       advent2016, base >=4.9 && <4.10, containers >=0.5 && <0.6, megaparsec >= 5.1 && < 5.2
  default-language:    Haskell2010
