name:                advent2016
version:             0.1.0.0
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           2016 Eric Mertens
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Common, Search, GridCoord
  build-depends:       base >=4.9 && <4.10, megaparsec >=5.1 && <5.2, containers >=0.5 && <0.6
  default-language:    Haskell2010

executable Day01
  main-is:             Day01.hs
  build-depends:       advent2016, base, megaparsec, containers
  default-language:    Haskell2010

executable Day02
  main-is:             Day02.hs
  build-depends:       advent2016, base, array >=0.5 && <0.6
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent2016, base, split >=0.2 && <0.3
  default-language:    Haskell2010

executable Day04
  main-is:             Day04.hs
  build-depends:       advent2016, base, containers, megaparsec
  default-language:    Haskell2010

executable Day05
  main-is:             Day05.hs
  build-depends:       advent2016, base, containers, cryptonite >=0.20 && <0.21, bytestring >=0.10 && <0.11
  default-language:    Haskell2010

executable Day06
  main-is:             Day06.hs
  build-depends:       advent2016, base, containers
  default-language:    Haskell2010

executable Day07
  main-is:             Day07.hs
  build-depends:       advent2016, base, megaparsec
  default-language:    Haskell2010

executable Day08
  main-is:             Day08.hs
  build-depends:       advent2016, base, array >=0.5 && <0.6, megaparsec
  default-language:    Haskell2010

executable Day09
  main-is:             Day09.hs
  build-depends:       advent2016, base, megaparsec
  default-language:    Haskell2010

executable Day10
  main-is:             Day10.hs
  build-depends:       advent2016, base, containers, megaparsec
  default-language:    Haskell2010

executable Day11
  main-is:             Day11.hs
  build-depends:       advent2016, base, containers
  default-language:    Haskell2010

executable Day12
  main-is:             Day12.hs
  build-depends:       advent2016, base, containers, megaparsec, vector, lens
  default-language:    Haskell2010

executable Day13
  main-is:             Day13.hs
  build-depends:       advent2016, base
  default-language:    Haskell2010

executable Day14
  main-is:             Day14.hs
  build-depends:       base, bytestring >=0.10.8 && <0.11, cryptonite >=0.20 && <0.21, memory >=0.13 && <0.14
  default-language:    Haskell2010

executable Day15
  main-is:             Day15.hs
  build-depends:       base
  default-language:    Haskell2010
