name:                advent2016
version:             0.1.0.0
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           2016 Eric Mertens
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Common, Search, GridCoord, AsmProg
  build-depends:       base >=4.9 && <4.10, megaparsec >=5.0 && <5.2, containers >=0.5 && <0.6, array >= 0.5 && <0.6, lens >= 4.15 && <4.16, mtl >=2.2 && <2.3
  default-language:    Haskell2010

executable Day01
  main-is:             Day01.hs
  build-depends:       advent2016, base, megaparsec, containers
  default-language:    Haskell2010

executable Day02
  main-is:             Day02.hs
  build-depends:       advent2016, base, array >=0.5 && <0.6
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent2016, base, split >=0.2 && <0.3
  default-language:    Haskell2010

executable Day04
  main-is:             Day04.hs
  build-depends:       advent2016, base, containers, megaparsec
  default-language:    Haskell2010

executable Day05
  main-is:             Day05.hs
  build-depends:       advent2016, base, containers, cryptohash-md5, bytestring >=0.10 && <0.11
  default-language:    Haskell2010

executable Day06
  main-is:             Day06.hs
  build-depends:       advent2016, base, containers
  default-language:    Haskell2010

executable Day07
  main-is:             Day07.hs
  build-depends:       advent2016, base, megaparsec
  default-language:    Haskell2010

executable Day08
  main-is:             Day08.hs
  build-depends:       advent2016, base, array >=0.5 && <0.6, megaparsec
  default-language:    Haskell2010

executable Day09
  main-is:             Day09.hs
  build-depends:       advent2016, base, megaparsec
  default-language:    Haskell2010

executable Day10
  main-is:             Day10.hs
  build-depends:       advent2016, base, containers, megaparsec
  default-language:    Haskell2010

executable Day11
  main-is:             Day11.hs
  build-depends:       advent2016, base, containers
  default-language:    Haskell2010

executable Day12
  main-is:             Day12.hs
  build-depends:       advent2016, base, containers, megaparsec, vector, lens
  default-language:    Haskell2010

executable Day13
  main-is:             Day13.hs
  build-depends:       advent2016, base
  default-language:    Haskell2010

executable Day14
  main-is:             Day14.hs
  build-depends:       base, bytestring >=0.10.8 && <0.11, cryptohash-md5
  default-language:    Haskell2010

executable Day15
  main-is:             Day15.hs
  build-depends:       base
  default-language:    Haskell2010

executable Day16
  main-is:             Day16.hs
  build-depends:       base, vector
  default-language:    Haskell2010

executable Day17
  main-is:             Day17.hs
  build-depends:       advent2016, bytestring, base, cryptohash-md5
  default-language:    Haskell2010

executable Day18
  main-is:             Day18.hs
  build-depends:       advent2016, base
  default-language:    Haskell2010

executable Day19
  main-is:             Day19.hs
  build-depends:       containers, base
  default-language:    Haskell2010

executable Day20
  main-is:             Day20.hs
  build-depends:       base, advent2016, megaparsec
  default-language:    Haskell2010

executable Day21
  main-is:             Day21.hs
  build-depends:       base, advent2016, megaparsec
  default-language:    Haskell2010

executable Day22
  main-is:             Day22.hs
  build-depends:       base, advent2016, megaparsec, array
  default-language:    Haskell2010

executable Day23
  main-is:             Day23.hs
  build-depends:       advent2016, base, containers, megaparsec, vector, lens, transformers
  default-language:    Haskell2010

executable Day24
  main-is:             Day24.hs
  build-depends:       advent2016, base, array, containers
  default-language:    Haskell2010

executable Day25
  main-is:             Day25.hs
  build-depends:       advent2016, base, containers, megaparsec, vector, lens, transformers
  default-language:    Haskell2010
