name:                asmprog-final
version:             0.1.0.0
synopsis:            Implementations of adventofcode.com 2016 problems 12,23 and 25
description:         This implementation explores using a final encoding of the
                     assembly language to support both alternate interpreters for
                     the language while also supporting addition of instructions
                     while preserving reuse of the previous implementations.
license:             BSD3
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2016 Eric Mertens
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable asmprog-final
  main-is:             Main.hs
  ghc-options:         -O2
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10,
                       megaparsec >=5.1 && <5.2,
                       primitive >=0.6 && <0.7,
                       text >=1.2 && <1.3,
                       transformers >=0.5 && <0.6,
                       vector >=0.12 && <0.13

  if flag(dump-core)
    build-depends: dump-core
    ghc-options: -fplugin=DumpCore

flag dump-core
  default: False
  description: Enable the dump-core GHC plugin
